<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.primerproyecto.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/producto"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="normal|bold|italic"
                android:fontFamily="sans-serif" />

            <TextView
                android:text="@string/intro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/intro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/martillo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r3"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/ancla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r4"
                    android:layout_weight="1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:text="@string/cuero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/r1"
                        android:layout_weight="1"
                        android:checked="true" />

                    <RadioButton
                        android:text="@string/cuerda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/r2"
                        android:layout_weight="1" />
                </RadioGroup>
            </RadioGroup>

            <TextView
                android:text="@string/intro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/oro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r5"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/oro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r6"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/plata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r7"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/niquel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r8"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/intro4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/m1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r9"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/m2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r10"
                    android:layout_weight="1" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidad"
                android:textSize="14sp"
                android:text="@string/cantidad" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/pedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmdBoton"
                    android:layout_weight="1"
                    android:onClick="pedido" />

                <Button
                    android:text="@string/borrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cmdBorrar"
                    android:layout_weight="1"
                    android:onClick="borrar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
